--- a/HTML/designpage-2.html
+++ b/HTML/designpage-2.html
@@ -29,27 +29,14 @@
             <h1 class="title">Design Page</h1>
             <h2>Name: LE Win</h2>
             <h2>SID: 59271285</h2><br>
-            <h2>Free Design Requirements</h2><br>
-            <h2>1) Use of positioning schemes</h2>
+            <h2>ES6 features</h2><br>
+            <h2>1) let and const</h2>
             <ul>
-                <li>Sticky: CSS folder -&gt; overall.css: line 41</li>
-                <li>relative: CSS folder -&gt; information.css: line 35</li>
+                <li>I use let and const to assign variable througout my code.</li>
             </ul>
-            <h2>2) Apply two different kinds of CSS3 techniques</h2>
+            <h2>2) set: in apply_page.js</h2>
             <ul>
-                <li>round corner: CSS folder -&gt; apply.css: line 8, line 145, line 178; ...</li>
-                <li>gradient: CSS folder -&gt; overall.css: line 25, line 79</li>
-                <li>box-shadow: CSS folder -&gt; apply.css: line 149, line 174; visit.css: line 70, line 90; ... </li>
-                <li>transition: CSS folder -&gt; visit.css: line 78; overall.css: line 62; ... </li>
-                <li>flex: CSS folder -&gt; visit.css: line 16 </li>
-                <li>animation: CSS folder -&gt; overall.page: line 99-108</li>
-            </ul>
-            <h2>3) how styles are grouped into style sheet(s)/embedded style</h2>
-            <ul>
-                <li>The CSS folder contains all the stylesheet files. Each CSS file is named similarly to its corresponding HTML file</li>
-                <li>The overall.css file is used to define the common styles applied across all pages, including the header, footer, font family, font size, and other global layout settings.</li>
-                <li>All styles are applied using external style sheets</li>
-                <li>No embedded style</li>
+                <li>line 40: I use set for the list of chosen rank because a rank can be chosen only 1 time, so set is suitable in this situation.</li>
             </ul>
         </div>
         <footer>
